--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@
 # in the templates via {{ site.myvariable }}.
 title: Sivan's Writing
 email: Sivanmehta2@gmail.com
+author: Sivan Mehta
 description: >- # this means to ignore newlines until "baseurl:"
-  Writing the I, Sivan Mehta, have done. It's almost guaranteed to be garbase 
+  Writing the I, Sivan Mehta, have done. It's almost guaranteed to be garbage
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: MehtaWrldPeace
 github_username:  SivanMehta
-
 # Build settings
 markdown: kramdown
 theme: minima
